# rust-search-test

./: .gitignore  Cargo.toml  Makefile  README.md
scripts/: cargo_format.sh  dump_data_from_postgres.sh  run_meilisearch.sh
src/: cli.rs  datasets.rs  env.rs  lib.rs  main.rs  search.rs  utils.rs
src/datasets/: decimal_value.rs  deseralize.rs  load_data.rs  movie.rs  player.rs  player_reduction.rs
src/datasets/player_reduction/: deserializer.rs  serializer.rs
src/datasets/player_reduction/deserializer/: date_string_to_naive_date.rs  date_string_to_naive_date_tests.rs  iso8601_string_to_datetime.rs  iso8601_string_to_datetime_tests.rs  string_cost_to_u64.rs  string_height_to_u64.rs  string_height_to_u8.rs  string_to_hash_data.rs  string_to_u64.rs  string_weight_to_u8.rs
src/datasets/player_reduction/serializer/: datetime_to_timestamp_u32.rs  naive_date_to_timestamp_u32.rs
src/search/: filter.rs
src/utils/: datetime.rs  hash_data.rs
