[package]
name = "searchy"
version = "0.1.0"
authors = ["Tsukasa Arima <pyar6329@gmail.com>"]
edition = "2024"

[lib]
doctest = false

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.43", default-features = false, features = ["rt-multi-thread", "macros", "signal"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
trait-variant = "0.1"
trait-set = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
url = { version = "2.5", features = ["serde"]}
strum = { version = "0.27", features = ["derive"] }
meilisearch-sdk = "0.28.0"
rust_decimal = {version = "1.36", features = ["serde-float"]}
